--- a/package.json
+++ b/package.json
@@ -5,15 +5,24 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "babel-runtime": "^6.26.0",
+    "@babel/core": "7.0.0-beta.31",
+    "@babel/preset-env": "7.0.0-beta.31",
+    "babel-loader": "8.0.0-beta.0",
+    "babel-runtime": "6.26.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "json-pretty-html": "^1.0.2",
-    "koa-route": "^3.2.0",
-    "koa-static": "^4.0.1",
-    "koa-webpack": "^1.0.0",
-    "koa2": "^2.0.0-alpha.7",
+    "koa-route": "3.2.0",
+    "koa-static": "4.0.1",
+    "koa-webpack": "1.0.0",
+    "koa2": "2.0.0-alpha.7",
     "mockjs": "^1.0.1-beta3",
-    "multiparty": "^4.1.3",
-    "socket.io": "^2.0.4"
+    "multiparty": "4.1.3",
+    "postcss-loader": "^2.0.8",
+    "socket.io": "2.0.4",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "3.8.1"
   },
   "scripts": {
     "dev": "node-dev ./server/server.dev.js 8087 ./api/api.js ./config/webpack.dev.config.js",
