--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "mobx": "^3.3.1",
+    "mobx-react": "^4.3.4",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-router": "^4.2.0"
+  },
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.31",
-    "@babel/preset-env": "7.0.0-beta.31",
-    "babel-loader": "8.0.0-beta.0",
+    "autoprefixer": "^7.1.6",
+    "babel-core": "6.26.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "6.26.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "json-pretty-html": "^1.0.2",
     "koa-route": "3.2.0",
     "koa-static": "4.0.1",
@@ -19,12 +31,14 @@
     "mockjs": "^1.0.1-beta3",
     "multiparty": "4.1.3",
     "postcss-loader": "^2.0.8",
+    "react-router-dom": "^4.2.2",
     "socket.io": "2.0.4",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "3.8.1"
   },
   "scripts": {
+    "dll": "sudo webpack --config ./config/webpack.dll.dev.js",
     "dev": "node-dev ./server/server.dev.js 8087 ./api/api.js ./config/webpack.dev.config.js",
     "dest": "node-dev ./server/server.dest.js ./config/webpack.dest.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
