--- a/package.json
+++ b/package.json
@@ -31,16 +31,18 @@
     "multiparty": "4.1.3",
     "postcss-loader": "^2.0.8",
     "react-router-dom": "^4.2.2",
+    "shelljs": "^0.7.8",
     "socket.io": "2.0.4",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "3.8.1"
   },
   "scripts": {
+    "create": "node ./server/create.js",
     "devdll": "webpack --config ./config/webpack.dll.dev.js",
-    "dev": "node-dev ./server/server.dev.js 8087 ./api/api.js ./config/webpack.dev.config.js",
+    "dev": "node ./server/server.dev.js 8087 ./api/api.js ./config/webpack.dev.config.js",
     "destdll": "webpack --config ./config/webpack.dll.dest.js",
-    "dest": "node-dev ./server/server.dest.js config/webpack.dest.config.js",
+    "dest": "node ./server/server.dest.js config/webpack.dest.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
