--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "6.26.0",
     "css-loader": "^0.28.7",
+    "cssnano-preset-advanced": "^4.0.0-rc.2",
     "file-loader": "^1.1.5",
     "json-pretty-html": "^1.0.2",
     "koa-route": "3.2.0",
@@ -29,6 +30,7 @@
     "koa2": "2.0.0-alpha.7",
     "mockjs": "^1.0.1-beta3",
     "multiparty": "4.1.3",
+    "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
     "react-router-dom": "^4.2.2",
     "shelljs": "^0.7.8",
