--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "socket.io": "2.0.4",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "webpack": "3.8.1"
+    "webpack": "3.8.1",
+    "webpack-merge": "^4.1.1"
   },
   "scripts": {
     "create": "node ./server/create.js",
