--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-runtime": "6.26.0",
     "css-loader": "^0.28.7",
     "cssnano-preset-advanced": "^4.0.0-rc.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "json-pretty-html": "^1.0.2",
     "koa-route": "3.2.0",
