--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "cssnano-preset-advanced": "^4.0.0-rc.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "html-webpack-harddisk-plugin": "^0.1.0",
+    "html-webpack-plugin": "^2.30.1",
     "json-pretty-html": "^1.0.2",
     "koa-route": "3.2.0",
     "koa-static": "4.0.1",
