--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "6.26.0",
+    "chokidar": "^1.7.0",
     "css-loader": "^0.28.7",
     "cssnano-preset-advanced": "^4.0.0-rc.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
-    "html-webpack-harddisk-plugin": "^0.1.0",
-    "html-webpack-plugin": "^2.30.1",
     "json-pretty-html": "^1.0.2",
     "koa-route": "3.2.0",
     "koa-static": "4.0.1",
