--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^4.2.0"
   },
   "devDependencies": {
+    "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^7.1.6",
     "babel-core": "6.26.0",
     "babel-loader": "^7.1.1",
