--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "6.26.0",
     "chokidar": "^1.7.0",
+    "css-hot-loader": "^1.3.3",
     "css-loader": "^0.28.7",
     "cssnano-preset-advanced": "^4.0.0-rc.2",
     "extract-text-webpack-plugin": "^3.0.2",
