--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cssnano-preset-advanced": "^4.0.0-rc.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "html-minifier": "^3.5.6",
     "json-pretty-html": "^1.0.2",
     "koa-route": "3.2.0",
     "koa-static": "4.0.1",
