--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "mobx-react": "^4.3.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router": "^4.2.0"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
@@ -21,7 +22,6 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "6.26.0",
     "chokidar": "^1.7.0",
     "css-hot-loader": "^1.3.3",
@@ -32,15 +32,12 @@
     "html-minifier": "^3.5.6",
     "json-pretty-html": "^1.0.2",
     "koa-route": "3.2.0",
-    "koa-static": "4.0.1",
     "koa-webpack": "1.0.0",
     "koa2": "2.0.0-alpha.7",
-    "md5": "^2.2.1",
     "mockjs": "^1.0.1-beta3",
     "multiparty": "4.1.3",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
-    "react-router-dom": "^4.2.2",
     "shelljs": "^0.7.8",
     "socket.io": "2.0.4",
     "style-loader": "^0.19.0",
