--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "file-loader": "^1.1.5",
     "html-minifier": "^3.5.6",
     "json-pretty-html": "^1.0.2",
-    "koa-route": "3.2.0",
+    "koa-router": "^7.3.0",
     "koa-webpack": "1.0.0",
     "koa2": "2.0.0-alpha.7",
     "mockjs": "^1.0.1-beta3",
