--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mockjs": "^1.0.1-beta3",
     "multiparty": "4.1.3",
     "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "shelljs": "^0.7.8",
     "socket.io": "^2.0.4",
