更改启动服务名称

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "repository": "https://github.com/pashangshangpo/k-template.git",
   "license": "MIT",
   "scripts": {
-    "create": "node ./server/create.js",
+    "new": "node ./server/create.js",
     "devdll": "webpack --config ./config/webpack.dll.dev.js",
-    "dev": "node ./server/index.js dev",
+    "server": "node ./server/index.js dev",
     "destdll": "webpack --config ./config/webpack.dll.dest.js",
-    "dest": "node ./server/index.js dest",
+    "build": "node ./server/index.js dest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
