--- a/package.json
+++ b/package.json
@@ -5,52 +5,13 @@
   "repository": "https://github.com/pashangshangpo/k-template.git",
   "license": "MIT",
   "scripts": {
-    "new": "node ./server/create.js",
-    "devdll": "webpack --config ./config/webpack.dll.dev.js",
-    "server": "node ./server/index.js dev",
-    "build": "node ./server/index.js dest",
+    "new": "node ./lib/server/create.js",
+    "start": "node ./lib/server/index.js dev",
+    "build": "node ./lib/server/index.js dest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "mobx": "^3.3.1",
-    "mobx-react": "^4.3.4",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "assets-webpack-plugin": "^3.5.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-runtime": "^6.26.0",
-    "chokidar": "^1.7.0",
-    "css-hot-loader": "^1.3.3",
-    "css-loader": "^0.28.7",
-    "cssnano-preset-advanced": "^4.0.0-rc.2",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-minifier": "^3.5.6",
-    "json-pretty-html": "^1.0.2",
-    "koa-router": "^7.3.0",
-    "koa-webpack": "1.0.0",
-    "koa2": "2.0.0-alpha.7",
-    "mockjs": "^1.0.1-beta3",
-    "multiparty": "4.1.3",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "shelljs": "^0.7.8",
-    "socket.io": "^2.0.4",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-merge": "^4.1.1"
+    "babel-loader": "^7.1.2"
   }
 }
