--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "chokidar": "^1.7.0",
+    "chunk-manifest-webpack-plugin": "^1.1.2",
     "commander": "^2.11.0",
     "cross-spawn": "^5.1.0",
     "css-hot-loader": "^1.3.3",
@@ -54,6 +55,7 @@
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
+    "webpack-manifest-plugin": "^1.3.2",
     "webpack-merge": "^4.1.1"
   }
 }
