--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "new": "node ./server/create.js",
     "start": "node ./server/index.js -t server",
     "build": "node ./server/index.js -t build",
+    "server": "node ./server/index.js -t test",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
