--- a/package.json
+++ b/package.json
@@ -30,18 +30,17 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "chokidar": "^1.7.0",
-    "commander": "^2.11.0",
-    "cross-spawn": "^5.1.0",
+    "chokidar": "1.7.0",
+    "commander": "2.11.0",
+    "cross-spawn": "5.1.0",
     "css-hot-loader": "^1.3.3",
     "css-loader": "^0.28.7",
     "cssnano-preset-advanced": "^4.0.0-rc.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
-    "fs-extra": "^4.0.2",
-    "html-minifier": "^3.5.6",
-    "json-pretty-html": "^1.0.2",
-    "koa-router": "^7.3.0",
+    "fs-extra": "4.0.2",
+    "html-minifier": "3.5.6",
+    "koa-router": "7.3.0",
     "koa-webpack": "1.0.0",
     "koa2": "2.0.0-alpha.7",
     "mockjs": "^1.0.1-beta3",
@@ -50,10 +49,10 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
-    "socket.io": "^2.0.4",
+    "socket.io": "2.0.4",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
-    "webpack-merge": "^4.1.1"
+    "webpack-merge": "4.1.1"
   }
 }
