--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "fs-extra": "4.0.2",
+    "happypack": "^4.0.0",
     "html-minifier": "3.5.6",
     "koa-router": "7.3.0",
     "koa-webpack": "1.0.0",
