--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "scripts": {
     "new": "node ./server/create.js",
-    "start": "node ./server/index.js -t server",
+    "start": "node ./server/index.js -t start",
     "build": "node ./server/index.js -t build",
-    "server": "node ./server/index.js -t test",
+    "server": "node ./server/index.js -t server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
