--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node ./server/index.js -t start",
     "build": "node ./server/index.js -t build",
     "server": "node ./server/index.js -t server",
+    "lint": "node_modules/.bin/eslint --fix ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -36,6 +38,8 @@
     "css-hot-loader": "^1.3.3",
     "css-loader": "^0.28.7",
     "cssnano-preset-advanced": "^4.0.0-rc.2",
+    "eslint": "^4.12.0",
+    "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "fs-extra": "4.0.2",
