--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "chokidar": "1.7.0",
+    "chrome-remote-interface": "^0.25.4",
     "commander": "2.11.0",
     "cross-spawn": "5.1.0",
     "css-hot-loader": "^1.3.3",
@@ -53,6 +54,7 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
+    "simple-headless-chrome": "^4.3.10",
     "socket.io": "2.0.4",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
