--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "babel-runtime": "^6.26.0",
     "chokidar": "1.7.0",
     "chrome-remote-interface": "^0.25.4",
+    "chromeless": "^1.3.0",
+    "chromy": "^0.5.7",
     "commander": "2.11.0",
     "cross-spawn": "5.1.0",
     "css-hot-loader": "^1.3.3",
