--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "new": "node ./server/create.js",
-    "start": "node-dev ./server/index.js -t start",
+    "start": "node ./server/install.js && node-dev ./server/index.js -t start",
     "build": "node-dev ./server/index.js -t build",
     "server": "node ./server/index.js -t server",
     "lint": "node_modules/.bin/eslint --fix ./src",
