--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "new": "node ./server/create.js",
     "start": "node ./server/install.js && node-dev ./server/index.js -t start",
-    "build": "node-dev ./server/index.js -t build",
+    "build": "node ./server/index.js -t build",
     "server": "node ./server/index.js -t server",
     "lint": "node_modules/.bin/eslint --fix ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
