--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
+    "webpack-md5-hash": "^0.0.6",
     "webpack-merge": "4.1.1"
   }
 }
